// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrow function declaration scenarios - templateLiteral cases handle templateLiteral case 1 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  var plateNo = 'No.123';
  var var1 = t('key_车牌号: ', {
    key1: plateNo
  });
  return <div data-i18n=\\"[\\\\\\"key_\\\\u8F66\\\\u724C\\\\u53F7: \\\\\\"]\\">{var1}</div>;
};"
`;

exports[`arrow function declaration scenarios - templateLiteral cases handle templateLiteral case 2 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  var plateNo = 'No.123';
  return <div data-i18n=\\"[\\\\\\"key_\\\\u8F66\\\\u724C\\\\u53F7: \\\\\\"]\\">{t('key_车牌号: ', {
      key1: plateNo
    })}</div>;
};"
`;

exports[`arrow function declaration scenarios - templateLiteral cases handle templateLiteral case 3 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  var plateNo = 'No.123';
  var price = '￥20W';
  var var1 = t('key_车牌号: , ', {
    key1: plateNo,
    key2: price
  });
  return <div data-i18n=\\"[\\\\\\"key_\\\\u8F66\\\\u724C\\\\u53F7: , \\\\\\"]\\">{var1}</div>;
};"
`;

exports[`arrow function declaration scenarios - templateLiteral cases handle templateLiteral case 4 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  var plateNo = 'No.123';
  var price = '￥20W' + 'abc';
  var var1 = t('key_车牌号: , ', {
    key1: plateNo,
    key2: price
  });
  return <div data-i18n=\\"[\\\\\\"key_\\\\u8F66\\\\u724C\\\\u53F7: , \\\\\\"]\\">{var1}</div>;
};"
`;

exports[`arrow function declaration scenarios - templateLiteral cases handle templateLiteral case 5 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  var plateNo = 'No.123';
  return <div data-i18n=\\"[\\\\\\"key_\\\\u5DF2\\\\u6025\\\\u505C\\\\\\"]\\">{t('key_已急停', {
      key1: plateNo
    })}</div>;
};"
`;

exports[`arrow function declaration scenarios - templateLiteral cases handle templateLiteral case 6 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var basicInfo = {
    plateNo: 123
  };
  useEffect(function () {
    stopMsgRef.current = message.info({
      content: t('key_已急停', {
        key1: basicInfo === null || basicInfo === void 0 ? void 0 : basicInfo.plateNo
      }),
      duration: 0
    });
  }, [t]);
};"
`;

exports[`arrow function declaration scenarios - templateLiteral cases handle templateLiteral case 7 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var basicInfo = {
    plateNo: {
      no: 123
    }
  };
  useEffect(function () {
    var _basicInfo$plateNo;
    stopMsgRef.current = message.info({
      content: t('key_已急停', {
        key1: basicInfo === null || basicInfo === void 0 || (_basicInfo$plateNo = basicInfo.plateNo) === null || _basicInfo$plateNo === void 0 ? void 0 : _basicInfo$plateNo.no
      }),
      duration: 0
    });
  }, [t]);
};"
`;
